--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>maoyan</title>
-    <meta name="viewport" content="initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, minimum-scale=0.5, maximum-scale=0.5, user-scalable=no">
     <link rel="icon" href="https://p1.meituan.net/codeman/44f8f3736d61a550dc0fa7bc1a70b6056518.ico" type="image/x-icon">
   </head>
   <body>
     <div id="demo"></div>
-    <script type="text/javascript" src="bundle.js"></script>
+    <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=w1qqU4tyxSx0CegfDnQdxKFEG9iGRYRe"></script> -->
+    <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
