修改路由和server.js

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="demo"></div>
-    <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=w1qqU4tyxSx0CegfDnQdxKFEG9iGRYRe"></script> -->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=w1qqU4tyxSx0CegfDnQdxKFEG9iGRYRe"></script>
     <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
